# hector_mapping2

./: .gitignore
hector_mapping/: CMakeLists.txt  package.xml
hector_mapping/include/hector_mapping/: hector_mapping.h
hector_mapping/src/: hector_mapping.cpp
hector_mapping2/: CMakeLists.txt  package.xml
hector_mapping2/include/hector_mapping/: hector_mapping.h
hector_mapping2/include/hector_mapping2/: hector_mapping.h  map.h  matcher.h  parameters.h  scan.h  types.h
hector_mapping2/include/hector_mapping2/internal/: axes.h  comparisons.h
hector_mapping2/include/hector_mapping2/map/: cell.h  conversion.h  occupancy.h  types.h
hector_mapping2/include/hector_mapping2/matcher/: ceres.h
hector_mapping2/include/hector_mapping2/structure/: array.h  binary_tree.h  structure.h
hector_mapping2/include/hector_mapping2/util/: marker_conversion.h
hector_mapping2/src/: hector_mapping.cpp  map.cpp  matcher.cpp  node.cpp  scan.cpp
hector_mapping2/src/map/: conversion.cpp  occupancy.cpp  types.cpp
hector_mapping2/src/matcher/: ceres.cpp  interpolated_map.hpp  residuals.hpp  solver.hpp
hector_mapping2/src/util/: covariance_conversion.cpp  marker_conversion.cpp
hector_mapping2_core/: CMakeLists.txt  package.xml
hector_mapping2_core/include/hector_mapping2_core/: map.h  matcher.h  scan.h  types.h
hector_mapping2_core/include/hector_mapping2_core/internal/: axes.h  comparisons.h  jet_opts.h  macros.h
hector_mapping2_core/include/hector_mapping2_core/map/: cell.h  conversion.h  occupancy.h  types.h
hector_mapping2_core/include/hector_mapping2_core/matcher/: ceres.h
hector_mapping2_core/include/hector_mapping2_core/structure/: array.h  binary_tree.h  get_cell.h  structure.h
hector_mapping2_core/src/: map.cpp  matcher.cpp  scan.cpp
hector_mapping2_core/src/map/: conversion.cpp  occupancy.cpp  types.cpp
hector_mapping2_core/src/matcher/: ceres.cpp  interpolated_map.hpp  residuals.hpp  solver.hpp
hector_mapping2_core/src/util/: covariance_conversion.cpp  marker_conversion.cpp
hector_mapping_core/: CMakeLists.txt  package.xml
hector_mapping_core/include/hector_mapping_core/: forwards.h  map.h  matcher.h  parameters.h  scan.h  types.h
hector_mapping_core/include/hector_mapping_core/internal/: axes.h  comparisons.h  jet_opts.h  macros.h
hector_mapping_core/include/hector_mapping_core/map/: cell.h  conversion.h  occupancy.h  quadtree.h  types.h
hector_mapping_core/include/hector_mapping_core/matcher/: ceres.h  interpolated_map.h  residuals.h
hector_mapping_core/include/hector_mapping_core/structure/: array.h  axis.h  binary_tree.h  get_cell.h  structure.h
hector_mapping_core/src/hector_mapping_core/: map.cpp  matcher.cpp  occupancy.cpp  scan.cpp
hector_mapping_core/src/hector_mapping_core/map/: conversion.cpp  occupancy.cpp  types.cpp
hector_mapping_core/src/hector_mapping_core/matcher/: ceres.cpp  interpolated_map.hpp  residuals.hpp  solver.hpp
